ice breaker and notes

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <section>
                 <h2 class="sticky-header">Volunteer Experience</h2>
                 <div>
-                    <div class="work-experience">
+                    <div class="work-experience mt-3">
                         <div class="header">
                             <div class="position">
                                 Volunteer <a class="company link" target="_blank" href="https://nss.gov.in/">National Service Scheme (N.S.S.)</a>
@@ -300,11 +300,23 @@
             <section>
                 <h2 class="sticky-header">Ice Breakers</h2>
                 <p class="my-0">
-                    Come talk to me about science, anime, games.
+                    Come talk to me about science, I am a big time nerd. From galaxies to evolution of life and technology.
+                    I watch anime and love manga art, loved Animax when it first came to India. Started playing games late but got addicted to FPS.
+                    Or let's talk about the weather and see where it goes, no pressure.
+                    <ul>
+                        <li>Add icons to cursor on hover</li>
+                        <li>Save theme choice to localstorage</li>
+                    </ul>
+                    Add icons to cursor on hover.
                 </p>
             </section>
         </main>
     </div>
+    <footer class="container">
+        <p class="center">
+            This is site is made with simple html css and js. You don't need to add complexity where not needed.
+        </p>
+    </footer>
     <script src="/script.js"></script>
 </body>
 </html>
